--- a/jorys-hands-site (2)/index.html
+++ b/jorys-hands-site (2)/index.html
@@ -33,7 +33,10 @@
 </head>
 <body>
   <header>
-    <div><strong>Jory's Hands</strong></div>
+  <div style="display: flex; align-items: center;">
+  <img src="jory-logo.png" alt="Jory's Hands Logo" style="height: 60px; margin-right: 10px;">
+  <strong>Jory's Hands</strong>
+</div>
     <nav>
       <a href="#home">Home</a>
       <a href="#shop">Shop</a>
