--- a/jorys-hands-site (2)/index.html
+++ b/jorys-hands-site (2)/index.html
@@ -33,9 +33,10 @@
 </head>
 <body>
   <header>
-  <div style="display: flex; align-items: center;">
-  <img src="jory-logo.png" alt="Jory's Hands Logo" style="height: 60px; margin-right: 10px;">
-  <strong>Jory's Hands</strong>
+   <div style="display: flex; align-items: center;">
+  <img src="jory-logo.png" alt="Jory's Hands Logo" style="height: 60px; margin-right: 12px;">
+  <strong style="font-size: 1.5em;">Jory's Hands</strong>
+</div>
 </div>
     <nav>
       <a href="#home">Home</a>
